--- a/sc/pom.xml
+++ b/sc/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.github.fancyerii</groupId>
 	<artifactId>sc</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>sc</name>
 	<description>site crawler</description>
 
