--- a/ifeng_crawler/pom.xml
+++ b/ifeng_crawler/pom.xml
@@ -44,7 +44,7 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties> 
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -57,6 +57,12 @@
 			<groupId>com.github.fancyerii</groupId>
 			<artifactId>sc</artifactId>
 			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.fancyerii</groupId>
+			<artifactId>review_crawler</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
