create project takungpao_es

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/*_crawler/target/
-/*_crawler/.settings/
-/*_crawler/.classpath
-/*_crawler/.project
+/*/target/
+/*/.settings/
+/*/.classpath
+/*/.project
