update crawler and fjnet

--- a/fjnet_crawler/scripts/conf/dbConf.properties
+++ b/fjnet_crawler/scripts/conf/dbConf.properties
@@ -1,5 +1,5 @@
 MYSQL_DRIVER=org.gjt.mm.mysql.Driver
 MYSQL_URL=jdbc:mysql://ai-dev:3306/${db}?useUnicode=true&characterEncoding=utf-8
-MYSQL_USER=ifeng
-MYSQL_PASS=12345
+MYSQL_USER=fjnet
+MYSQL_PASS=chanlin_searcher_fjnet
 PHOENIX_URL=jdbc:phoenix:localhost
