--- a/ifeng_es/pom.xml
+++ b/ifeng_es/pom.xml
@@ -168,6 +168,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
