--- a/ifeng_crawler/pom.xml
+++ b/ifeng_crawler/pom.xml
@@ -64,6 +64,13 @@
 			<artifactId>review_crawler</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>jdk.tools</groupId>
+			<artifactId>jdk.tools</artifactId>
+			<version>1.8.0_111</version>
+			<scope>system</scope>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
