--- a/takungpao_crawler/pom.xml
+++ b/takungpao_crawler/pom.xml
@@ -60,9 +60,16 @@
 			<artifactId>sc</artifactId>
 			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>jdk.tools</groupId>
+			<artifactId>jdk.tools</artifactId>
+			<version>1.8.0_111</version>
+			<scope>system</scope>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency>
 	</dependencies>
-	
-<build>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -158,6 +165,6 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-	</repositories>	
-	
+	</repositories>
+
 </project>
