--- a/takungpao_es/pom.xml
+++ b/takungpao_es/pom.xml
@@ -93,6 +93,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.fancyerii</groupId>
+			<artifactId>ifeng_es</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
