--- a/scui/pom.xml
+++ b/scui/pom.xml
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>com.github.fancyerii</groupId>
 			<artifactId>sc</artifactId>
-			<version>1.0</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
