--- a/es_search/pom.xml
+++ b/es_search/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.github.wyxpku</groupId>
     <artifactId>es_search</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <licenses>
         <license>
             <name>MIT License</name>
