--- a/search_api/pom.xml
+++ b/search_api/pom.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.github.wyxpku</groupId>
     <artifactId>search_api</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -15,13 +12,11 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
     <scm>
         <url>https://github.com/wyxpku/knowledge-distillation</url>
         <connection>scm:git:git://github.com:wyxpku/knowledge-distillation.git</connection>
         <developerConnection>scm:git:git@github.com:wyxpku/knowledge-distillation.git</developerConnection>
     </scm>
-
     <developers>
         <developer>
             <email>fancyerii@gmail.com</email>
@@ -36,7 +31,6 @@
             <id>wyxpku</id>
         </developer>
     </developers>
-
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -51,7 +45,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -70,15 +63,12 @@
             <version>2.4</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
         </dependency>
     </dependencies>
-
-
     <build>
         <finalName>search_api</finalName>
         <plugins>
@@ -107,7 +97,6 @@
                     </connectors>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
