--- a/ifeng_crawler/conf/dbConf.properties
+++ b/ifeng_crawler/conf/dbConf.properties
@@ -1,5 +1,5 @@
 MYSQL_DRIVER=org.gjt.mm.mysql.Driver
-MYSQL_URL=jdbc:mysql://ai-dev:3306/${db}?useUnicode=true&characterEncoding=utf-8
+MYSQL_URL=jdbc:mysql://localhost:3306/${db}?useUnicode=true&characterEncoding=utf-8
 MYSQL_USER=ifeng
 MYSQL_PASS=12345
 PHOENIX_URL=jdbc:phoenix:localhost
